========================================================================

libmikmod v3.3.8 was released on XX-XXX-XXXX.

- Handle the FastTracker2 pattern loop (E60) bug. Modules abusing this
  bug (roadblas.xm) should play correctly now. Thanks to Eugene Toder.
- Fixed a possible undefined behavior in the XM loader.
- Support for OpenBSD sndio.
- Updated configury. The aix, hpux, bsd/sunaudio and sgi audio drivers
  are now configurable and not built unconditionally.
- Minor fix/tidy-ups.


Summary of changes between libmikmod 3.3.6 and libmikmod 3.3.7:
========================================================================

libmikmod v3.3.7 was released on 31-Aug-2014.

- Android support, thanks to Radovan Cervenka, with the OpenSL ES
  driver adapted from the old libmikmod-android project.
- Support for AmigaOS and its variants like MorphOS, AROS, and a new
  AHI driver thanks to Szilárd Biró.
- Build system configuration and packaging simplifications, tidy-ups.
- Several portability tweaks.
- New PSP driver. (untested. suggested by Jon Daniel, based on older
  ports from pspdev.)
- Fix some OS/2 bit rot. (for nostalgia...)


Summary of changes between libmikmod 3.3.5 and libmikmod 3.3.6:
========================================================================

libmikmod v3.3.6 was released on 20-Mar-2014.

- UMX loader: Minor corrections to the container parse code with
  relation to upkg file format. (for correctness' sake only...)
- ALSA and ESD drivers: Fixed a dlopen() issue.
- PulseAudio driver: Simplified its command line parser procedure,
  so that it always sets server and sink to some value, NULL or
  otherwise, and fix a very minor memory leak on some occasions.
- Configury, OSS driver: Removed useless check for /dev/sndstat
  presence, added <soundcard.h> check to cover all our bases for
  less common setups.
- Configury, NAS driver: Use the configury detected X header and
  library locations when necessary, not just hardcoded /usr/X11R6/.